--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h2></h2>
 
     <script type="text/javascript" src="js/tower-builder.js"></script>
+    <script type="text/javascript" src="js/high-low-nums.js"></script>
 </body>
 </html>
