--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 
     <script type="text/javascript" src="js/tower-builder.js"></script>
     <script type="text/javascript" src="js/high-low-nums.js"></script>
+    <script type="text/javascript" src="js/descending-order.js"></script>
 </body>
 </html>
