updated index script and solved sum-between-nums

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <script type="text/javascript" src="js/tower-builder.js"></script>
     <script type="text/javascript" src="js/high-low-nums.js"></script>
     <script type="text/javascript" src="js/descending-order.js"></script>
+    <script type="text/javascript" src="js/sum-between-nums.js"></script>
 </body>
 </html>
