finding numbers with digits to their index+1 power are sumed and equal to themselves, prompt is more confusing than the solution

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <script type="text/javascript" src="js/high-low-nums.js"></script>
     <script type="text/javascript" src="js/descending-order.js"></script>
     <script type="text/javascript" src="js/sum-between-nums.js"></script>
+    <script type="text/javascript" src="js/sum-consecutive-powers.js"></script>
 </body>
 </html>
