--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <script type="text/javascript" src="js/descending-order.js"></script>
     <script type="text/javascript" src="js/sum-between-nums.js"></script>
     <script type="text/javascript" src="js/sum-consecutive-powers.js"></script>
+    <script type="text/javascript" src="js/abbreviate-names.js"></script>
 </body>
 </html>
