repeat each element of a string an index number of times

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <script type="text/javascript" src="js/sum-between-nums.js"></script>
     <script type="text/javascript" src="js/sum-consecutive-powers.js"></script>
     <script type="text/javascript" src="js/abbreviate-names.js"></script>
+    <script type="text/javascript" src="js/mumbling.js"></script>
 </body>
 </html>
