regex is confusing

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <script type="text/javascript" src="js/sum-consecutive-powers.js"></script>
     <script type="text/javascript" src="js/abbreviate-names.js"></script>
     <script type="text/javascript" src="js/mumbling.js"></script>
+    <script type="text/javascript" src="js/regex-camelCase.js"></script>
 </body>
 </html>
