could have used map

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <script type="text/javascript" src="js/abbreviate-names.js"></script>
     <script type="text/javascript" src="js/mumbling.js"></script>
     <script type="text/javascript" src="js/regex-camelCase.js"></script>
+    <script type="text/javascript" src="js/testing-array-of-arrays.js"></script>
 </body>
 </html>
