BigInt required for the test cases

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <script type="text/javascript" src="js/mumbling.js"></script>
     <script type="text/javascript" src="js/regex-camelCase.js"></script>
     <script type="text/javascript" src="js/testing-array-of-arrays.js"></script>
+    <script type="text/javascript" src="js/sum-strings-of-nums.js"></script>
 </body>
 </html>
